# Layer-AI

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
.claude/skills/verify/: SKILL.md
.github/workflows/: desktop.yml  pages.yml
public/: manifest.webmanifest
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: desktop.ts  diff.ts  openai.ts  settings.ts  tasks.ts  text.ts
