[package]
name = "layer-ai"
version = "0.1.0"
description = "Mini assistant LLM toujours au premier plan"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
name = "layer_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
